{
  "version": 4,
  "terraform_version": "0.13.6",
  "serial": 136,
  "lineage": "ae8d1082-fd22-099b-b21a-ac2b0cb3f3d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:085474378228:security-group/sg-04bd115a93af49f39",
            "description": "For application servers",
            "egress": [],
            "id": "sg-04bd115a93af49f39",
            "ingress": [],
            "name": "app-servers",
            "name_prefix": "",
            "owner_id": "085474378228",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-00aa34f5d8ce57fa6"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:085474378228:security-group/sg-08cb2673296d5deea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ebd25295153d3df"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-08cb2673296d5deea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-server",
            "name_prefix": "",
            "owner_id": "085474378228",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-00aa34f5d8ce57fa6"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 5432,
            "id": "sgrule-4218168010",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00ebd25295153d3df",
            "self": false,
            "source_security_group_id": "sg-04bd115a93af49f39",
            "to_port": 5432,
            "type": "ingress"
          },
          "dependencies": [
            "aws_rds_cluster_parameter_group.aurora_cluster_postgresql10_parameter_group",
            "aws_security_group.app_servers",
            "module.aurora.aws_db_subnet_group.this",
            "module.aurora.aws_rds_cluster.this",
            "module.aurora.aws_security_group.this",
            "module.aurora.random_id.snapshot_identifier",
            "module.aurora.random_password.master_password",
            "module.vpc_main.aws_subnet.private",
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aurora_rds_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 5432,
            "id": "sgrule-1242902898",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00ebd25295153d3df",
            "self": false,
            "source_security_group_id": "sg-08cb2673296d5deea",
            "to_port": 5432,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "module.aurora.aws_rds_cluster.this",
            "module.aurora.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_aurora_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 5432,
            "id": "sgrule-1732229660",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08cb2673296d5deea",
            "self": false,
            "source_security_group_id": "sg-00ebd25295153d3df",
            "to_port": 5432,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "module.aurora.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ssh_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3682162475",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08cb2673296d5deea",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:085474378228:security-group/sg-00ebd25295153d3df",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00ebd25295153d3df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04bd115a93af49f39"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08cb2673296d5deea"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "climbingtopos-20210210202911027100000002",
            "name_prefix": "climbingtopos-",
            "owner_id": "085474378228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora-climbingtopos"
            },
            "timeouts": null,
            "vpc_id": "vpc-00aa34f5d8ce57fa6"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc970315c2d38f01",
            "arn": "arn:aws:ec2:eu-west-1:085474378228:instance/i-0629bd6a591046bb6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0629bd6a591046bb6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "james",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-05e24320a232eae55",
            "private_dns": "ip-10-0-101-152.eu-west-1.compute.internal",
            "private_ip": "10.0.101.152",
            "public_ip": "54.77.247.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-076cb0dccfd167d53",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06730fcf5c3a9bc82",
            "tags": {
              "Environment": "dev",
              "Name": "bastion",
              "Terraform": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "bastion"
            },
            "vpc_security_group_ids": [
              "sg-08cb2673296d5deea"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion",
            "module.vpc_main.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:085474378228:internet-gateway/igw-0efdcbfe8747b5780",
            "id": "igw-0efdcbfe8747b5780",
            "owner_id": "085474378228",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-00aa34f5d8ce57fa6"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0efdcbfe8747b5780",
            "id": "r-rtb-0d338148d01bce3981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d338148d01bce398",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc_main.aws_internet_gateway.this",
            "module.vpc_main.aws_route_table.public",
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-092db097616e2fab9",
            "owner_id": "085474378228",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-private-eu-west-1a"
            },
            "vpc_id": "vpc-00aa34f5d8ce57fa6"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e503c3101e50e658",
            "owner_id": "085474378228",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-private-eu-west-1b"
            },
            "vpc_id": "vpc-00aa34f5d8ce57fa6"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e70cd338c1d1d131",
            "owner_id": "085474378228",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-private-eu-west-1c"
            },
            "vpc_id": "vpc-00aa34f5d8ce57fa6"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d338148d01bce398",
            "owner_id": "085474378228",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0efdcbfe8747b5780",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public"
            },
            "vpc_id": "vpc-00aa34f5d8ce57fa6"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0306f1ef5918a9278",
            "route_table_id": "rtb-092db097616e2fab9",
            "subnet_id": "subnet-06e520bde5351109d"
          },
          "dependencies": [
            "module.vpc_main.aws_route_table.private",
            "module.vpc_main.aws_subnet.private",
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e94fe9f0eba7ffa",
            "route_table_id": "rtb-0e503c3101e50e658",
            "subnet_id": "subnet-039e450990d189335"
          },
          "dependencies": [
            "module.vpc_main.aws_route_table.private",
            "module.vpc_main.aws_subnet.private",
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccf98e5424dfcbfa",
            "route_table_id": "rtb-0e70cd338c1d1d131",
            "subnet_id": "subnet-0b119a2e7e39da991"
          },
          "dependencies": [
            "module.vpc_main.aws_route_table.private",
            "module.vpc_main.aws_subnet.private",
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01985fabb8e56ec89",
            "route_table_id": "rtb-0d338148d01bce398",
            "subnet_id": "subnet-06730fcf5c3a9bc82"
          },
          "dependencies": [
            "module.vpc_main.aws_route_table.public",
            "module.vpc_main.aws_subnet.public",
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b632d7e27f45df99",
            "route_table_id": "rtb-0d338148d01bce398",
            "subnet_id": "subnet-0d03411c02fd60606"
          },
          "dependencies": [
            "module.vpc_main.aws_route_table.public",
            "module.vpc_main.aws_subnet.public",
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086a22221ff5ffa2f",
            "route_table_id": "rtb-0d338148d01bce398",
            "subnet_id": "subnet-0638ed3fb584c6b69"
          },
          "dependencies": [
            "module.vpc_main.aws_route_table.public",
            "module.vpc_main.aws_subnet.public",
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:085474378228:subnet/subnet-06e520bde5351109d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06e520bde5351109d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085474378228",
            "tags": {
              "Name": "main-private-eu-west-1a"
            },
            "vpc_id": "vpc-00aa34f5d8ce57fa6"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:085474378228:subnet/subnet-039e450990d189335",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-039e450990d189335",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085474378228",
            "tags": {
              "Name": "main-private-eu-west-1b"
            },
            "vpc_id": "vpc-00aa34f5d8ce57fa6"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:085474378228:subnet/subnet-0b119a2e7e39da991",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b119a2e7e39da991",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085474378228",
            "tags": {
              "Name": "main-private-eu-west-1c"
            },
            "vpc_id": "vpc-00aa34f5d8ce57fa6"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:085474378228:subnet/subnet-06730fcf5c3a9bc82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-06730fcf5c3a9bc82",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "085474378228",
            "tags": {
              "Name": "main-public-eu-west-1a"
            },
            "vpc_id": "vpc-00aa34f5d8ce57fa6"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:085474378228:subnet/subnet-0d03411c02fd60606",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0d03411c02fd60606",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "085474378228",
            "tags": {
              "Name": "main-public-eu-west-1b"
            },
            "vpc_id": "vpc-00aa34f5d8ce57fa6"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:085474378228:subnet/subnet-0638ed3fb584c6b69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0638ed3fb584c6b69",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "085474378228",
            "tags": {
              "Name": "main-public-eu-west-1c"
            },
            "vpc_id": "vpc-00aa34f5d8ce57fa6"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.this",
            "module.vpc_main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:085474378228:vpc/vpc-00aa34f5d8ce57fa6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a74a7790fdaa92f4",
            "default_route_table_id": "rtb-03896ed5ab38e0b5e",
            "default_security_group_id": "sg-0920d0407b22f1f00",
            "dhcp_options_id": "dopt-07035f4bc8c41485e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00aa34f5d8ce57fa6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03896ed5ab38e0b5e",
            "owner_id": "085474378228",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}